--- a/templates/compte/compte.html.twig
+++ b/templates/compte/compte.html.twig
@@ -22,7 +22,14 @@
             <p>Argent sur le compte tiré de la base de donnée</p>
         </article>
         <article id="compte_epargne">
+            <h2>Compte epargne</h2>
+            <p>Nom du compte</p>
+            <p>Argent sur le compte tiré de la base de donnée</p>
         </article>
+        <article id="compte_epargne">
+            {# remplir avec élément de la base de donnée #}
+        </article>
+        <button id="ajout_compte">Ajouter un compte</button>
     </div>
 
 
